@@ -189,6 +189,17 @@ All panes namespaced to @ThinkingSphinx::Panes@, and the @DistancePane@ is autom
 
 If you wish to add your own panes, go ahead. The only requirement is that the initializer must accept three arguments: the search context, the underlying search result object, and a hash of the raw values from Sphinx.
 
+h2. Deployment with Capistrano
+
+Thinking Sphinx comes with several Capistrano tasks to help ease deployment of your applications. Just require the recipes:
+
+```ruby
+# config/deploy.rb
+require 'thinking_sphinx/capistrano'
+```
+
+When running `cap deploy:setup` to get your server ready for deployments, Thinking Sphinx will also set up a shared folder for your indexes. Before finalizing a deployment, these indexes will be symlinked into the release path for use. When you deploy your application for the first time using `cap deploy:cold`, your indexes will be built for you and the search daemon will be started. Run `cap -T` to see all of the deployment tasks.
+
 h2. Limitations
 
 Almost all functionality from v2 releases are implemented, though it's worth noting that some settings haven't yet been brought across, and a handful of the smaller features don't yet exist either. Some may actually not return... we'll see.
@@ -199,7 +210,6 @@ May or may not be added:
 * Bitmask weighting helper
 * Timezone support (for databases not using UTC)
 * Abstract Inheritance support (maybe - not sure this is something many of people want).
-* Capistrano Tasks
 * Facet support for arrays of strings.
 
 h3. Sphinx Versions
